--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "chart.js": "^4.0.1",
+    "chartjs": "^0.3.24",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
+    "vue": "^3.2.45",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
